# aware

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  nuget.config  registry-index.json
.claude/commands/: aware-update.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent-request.yml  bug-report.yml  config.yml  skill-issue.yml
.github/workflows/: build-sidecar.yml  release.yml
00-vision/: decalog.md  manifesto.md
10-core/: agent-spec.md  app-spec.md  cli-roadmap.md  cli-spec.md  oauth-registration.md
30-apps/_examples/: README.md  architect-sheet-status.flo  bim-monday-audit.flo  designer-monday-shots.flo  detailer-issue-pack.flo  engineer-peer-review-delta.flo  qa-drawings-to-tekla.flo  welded-to-tc.flo
40-diagrams/: README.md  aware-master.excalidraw  aware-master.mmd  substrate-playground.html
90-onboarding/: README.md  architect.md  bim-manager.md  designer.md  detailer.md  structural-engineer.md
99-feedback/2026-05-17-persona-audit/: CONSOLIDATED.md  README.md  architect.md  bim-manager.md  designer.md  detailer.md  structural-engineer.md
99-voices/: README.md
atoms/: README.md  at-least.yaml  at-most.yaml  avg.yaml  count.yaml  csv-row-build.yaml  format-date.yaml  group-by.yaml  is-newer-than.yaml  json-path.yaml  kebab-to-pascal.yaml  max.yaml  min.yaml  naming-template.yaml  pascal-to-kebab.yaml  path-join.yaml  pluck.yaml  regex-match.yaml  sort-by.yaml  sum.yaml  unique.yaml
cli/: Cargo.toml  README.md  build.rs
cli-npm/: .npmignore  README.md  package.json
cli-npm/scripts/: postinstall.js  uninstall.js
cli-reader/: AgentSynthesizer.cs  AttributeReader.cs  AwareReader.csproj  DocId.cs  GeneratedAgent.cs  MetadataReflector.cs
cli-reader/Recipes/: IRecipe.cs  TeklaPluginRecipe.cs
cli-revit/: .gitignore  install-addin.ps1
cli-revit/AwareRevit/: AddInApplication.cs  AwareRevit.addin  AwareRevit.csproj  ExecuteEventHandler.cs  PipeServer.cs  ResultSerializer.cs  ScriptEngine.cs
cli-revit/Ingest/: run-drill.ps1
cli-revit/Shared/: ExecRequest.cs  ExecResponse.cs  PipeFrame.cs  Shared.csproj
cli-revit/Sidecar/: PipeClient.cs  Program.cs  Receipts.cs  ResultSerializerCore.cs  RevitProcessFinder.cs  ScriptWrapper.cs  cli-revit.csproj
cli-revit/Tests/: EndToEndTests.cs  PipeClientTests.cs  PipeFrameTests.cs  ReceiptsTests.cs  ResultSerializerTests.cs  RevitProcessFinderTests.cs  ScriptWrapperTests.cs  cli-revit.Tests.csproj
cli-rhino/: .gitignore  Program.cs  README.md  Receipts.cs  RhinocodeClient.cs  ScriptServerHelper.cs  ScriptWrapper.cs  cli-rhino.csproj
cli-rhino/Ingest/: run-drill.ps1
cli-rhino/Tests/: AssemblyInfo.cs  CloseTests.cs  ExecTests.cs  LaunchTests.cs  RhinocodeClientTests.cs  ScriptWrapperTests.cs  cli-rhino.Tests.csproj
cli-rhino/Verbs/: Close.cs  Exec.cs  Launch.cs  ListInstances.cs  SendStatus.cs
cli-roslyn/: Program.cs  RoslynReader.cs  cli-roslyn.csproj
cli-roslyn/Tests/: RoslynReaderTests.cs  aware-roslyn.Tests.csproj
cli-sidecar/: Program.cs  README.md  cli-sidecar.csproj
cli-sidecar/Com/: ComReflector.cs
cli-sidecar/Decompile/: IlspyShell.cs
cli-sidecar/Headers/: HeaderParser.cs
cli-sidecar/Ingest/: CoverageValidator.cs
cli-sidecar/Protocol/: Agent.cs  Request.cs  Response.cs
cli-sidecar/Reflection/: DllReflector.cs
cli-sidecar/Tests/: AllplanParserTests.cs  ArchiCADParserTests.cs  AttributeReaderTests.cs  BluebeamParserTests.cs  ComReflectorTests.cs  CoverageValidateTests.cs  DllReflectorTests.cs  DynamoParserTests.cs  HeaderParserTests.cs  IdeaStaticaParserTests.cs  IlspyShellTests.cs  NavisworksParserTests.cs  RhinoMemberPageParserTests.cs  SketchUpMemberPageParserTests.cs  SolibriParserTests.cs  SynthesizerTests.cs  TeddsParserTests.cs  TeklaMemberPageParserTests.cs  TeklaRecipeTests.cs  cli-sidecar.Tests.csproj
cli-sketchup/: BridgeInstaller.cs  Program.cs  Receipts.cs  SketchupClient.cs  cli-sketchup.csproj
cli-sketchup/BridgeAssets/: aware_sketchup_bridge.rb
cli-sketchup/Ingest/: dismiss-welcome.ps1  run-drill.ps1
cli-sketchup/Tests/: AssemblyInfo.cs  BridgeInstallerTests.cs  ExecVerbTests.cs  ReceiptsTests.cs  SketchupClientTests.cs  cli-sketchup.Tests.csproj
cli-sketchup/Verbs/: Close.cs  Exec.cs  Launch.cs  ListInstances.cs  SendStatus.cs
cli-tekla/: Program.cs  README.md  cli-tekla.csproj
cli-tekla/Ingest/: run-drill.ps1
cli-tekla/Tests/: FilterTargetsTests.cs  (+6 more)
cli/src/: app_lock.rs  context.rs  envelope.rs  error.rs  lockfile.rs  main.rs  paths.rs  receipt.rs  sidecar.rs  validate.rs
cli/src/auth/: config.rs  device.rs  keychain.rs  mod.rs  paste.rs  pkce.rs  profile.rs  refresh.rs
cli/src/builder/: cli_help.rs  coverage.rs  mod.rs  npm.rs  nuget.rs  openapi.rs  python.rs  roslyn.rs  ruby.rs  stubs.rs  yard.rs
cli/src/commands/: agent.rs  app.rs  build.rs  connect.rs  coverage.rs  diagram.rs  doctor.rs  key.rs  mod.rs  plugins.rs  receipt_cli.rs  report.rs  search.rs  sidecar.rs  skill.rs  tree.rs  voice.rs
cli/src/install/: bundle.rs  local.rs  mod.rs  registry.rs  uninstall.rs
cli/src/manifest/: agent.rs  app.rs  expose.rs  loader.rs  mod.rs
cli/src/plugins/: claude_code.rs  codex.rs  mod.rs  opencode.rs
cli/src/registry/: fetch.rs  index.rs  mod.rs
cli/src/render/: mod.rs  table.rs  topology.rs
cli/src/runtime/: context.rs  inline.rs  invoker.rs  lifecycle.rs  mod.rs  orchestrator.rs  pidfile.rs  provenance.rs  template.rs
cli/src/skill_builder/: create.rs  eval.rs  mod.rs  modify.rs  port.rs
cli/tests/: agent_describe.rs  agent_install.rs  agent_list.rs  agent_skill.rs  agent_uninstall.rs  agent_update.rs  agent_validate.rs  app_export.rs  app_expose.rs  app_install.rs  app_list.rs  app_logs.rs  app_run.rs  app_show.rs  app_stop.rs  app_uninstall.rs  app_validate.rs  basic.rs  build_agent.rs  build_from_coverage.rs  connect_byo.rs  coverage_e2e.rs  coverage_validate.rs  doctor.rs  doctor_integrity.rs  plugins_cmd.rs  roslyn_integration.rs  sidecar_integration.rs  skill_cmds.rs
cli/tests/common/: mod.rs
scripts/: build-substrate-playground.py  install.ps1  install.sh  regen-nuget-agents.py
(+69248 files in other folders)
