[package]
name        = "aware"
version     = "0.8.0"
edition     = "2024"
authors     = ["AWARE contributors"]
license     = "Apache-2.0"
description = "Open-source agentic substrate for AECO — CLI"
homepage    = "https://github.com/aware-aeco/aware"
repository  = "https://github.com/aware-aeco/aware"
readme      = "README.md"

[[bin]]
name = "aware"
path = "src/main.rs"

[dependencies]
clap          = { version = "4.5",  features = ["derive", "wrap_help"] }
serde         = { version = "1.0",  features = ["derive"] }
serde_yaml    = "0.9"
serde_json    = "1.0"
thiserror     = "2.0"
anyhow        = "1.0"
dirs          = "6.0"
ureq          = { version = "2", default-features = false, features = ["tls"] }
flate2        = "1"
tar           = "0.4"
chrono        = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tempfile      = "3.14"

# v0.3 runtime additions
tokio       = { version = "1", features = ["full"] }
minijinja   = "2"
uuid        = { version = "1", features = ["v4"] }
async-trait = "0.1"

# v0.4+ (commented until needed):
# reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }

# v0.5 builders
zip       = "2"
quick-xml = "0.36"

# v0.7.2 — YARD generator (HTML scraping)
scraper   = "0.27"

# v0.4 auth + host-plugin deps
oauth2     = "4"
keyring    = { version = "3", default-features = false, features = ["windows-native", "apple-native", "sync-secret-service", "crypto-rust"] }
tiny_http  = "0.12"
webbrowser = "1"
url        = "2"
rand       = "0.8"
base64     = "0.22"
sha2       = "0.10"

[dev-dependencies]
assert_cmd  = "2.0"
predicates  = "3.1"
tempfile    = "3.14"

[[test]]
# Source is tests/agent_install.rs.
# Windows auto-elevates any exe whose name contains "install" (AppCompat heuristic);
# giving the binary a different name avoids the UAC prompt in CI / local runs.
name = "agent_inst_test"
path = "tests/agent_install.rs"

[[test]]
# Source is tests/agent_uninstall.rs.
# "uninstall" contains "install" — same Windows AppCompat UAC heuristic applies.
# Avoid "uninst" too since it may also trigger the heuristic; use "rm_agent" instead.
name = "agent_rm_test"
path = "tests/agent_uninstall.rs"

[[test]]
# Source is tests/agent_update.rs.
# "update" alone is unlikely to trigger the Windows AppCompat heuristic, but we use
# a short alias anyway to stay consistent with the naming convention above.
name = "agent_upd_test"
path = "tests/agent_update.rs"

[[test]]
# Source is tests/agent_validate.rs.
# "validate" is safe on Windows AppCompat but we use a short alias for consistency.
name = "agent_val_test"
path = "tests/agent_validate.rs"

[[test]]
# Source is tests/app_install.rs.
# "install" in the binary name triggers the Windows AppCompat UAC heuristic;
# use a different name so CI / local runs don't require elevation.
name = "app_inst_test"
path = "tests/app_install.rs"

[[test]]
# Source is tests/app_uninstall.rs.
# "uninstall" contains "install" — same Windows AppCompat UAC heuristic applies.
name = "app_rm_test"
path = "tests/app_uninstall.rs"

[[test]]
# Source is tests/app_validate.rs.
# "validate" is safe on Windows AppCompat but we use a short alias for consistency.
name = "app_val_test"
path = "tests/app_validate.rs"

[[test]]
# Source is tests/app_export.rs.
name = "app_exp_test"
path = "tests/app_export.rs"

[[test]]
# Source is tests/doctor_integrity.rs.
# "doctor" is safe on Windows AppCompat — no UAC heuristic applies.
name = "doctor_integrity"
path = "tests/doctor_integrity.rs"

[[test]]
# Source is tests/app_run.rs.
# "run" is safe on Windows AppCompat — no UAC heuristic applies.
# Using "app_run_test" for consistency with the naming convention above.
name = "app_run_test"
path = "tests/app_run.rs"

[[test]]
# Source is tests/app_stop.rs.
# "stop" is safe on Windows AppCompat — no UAC heuristic applies.
name = "app_stop_test"
path = "tests/app_stop.rs"

[[test]]
# Source is tests/app_logs.rs.
# Covers both the default print path (Task 16) and the --replay flag (Task 17).
name = "app_logs_test"
path = "tests/app_logs.rs"

[[test]]
# Source is tests/plugins_cmd.rs.
# "plugin" alone is unlikely to trigger the Windows AppCompat UAC heuristic,
# but we use a descriptive alias for consistency with the naming convention above.
name = "plugins_cmd_test"
path = "tests/plugins_cmd.rs"

[[test]]
# Source is tests/build_agent.rs.
# "build" is safe on Windows AppCompat — no UAC heuristic applies.
# Using "build_agent_test" for consistency with the naming convention above.
name = "build_agent_test"
path = "tests/build_agent.rs"

[[test]]
# Source is tests/skill_cmds.rs.
# "skill" is safe on Windows AppCompat — no UAC heuristic applies.
name = "skill_cmds_test"
path = "tests/skill_cmds.rs"

[[test]]
# Source is tests/sidecar_integration.rs.
# End-to-end test that spawns the NativeAOT sidecar binary and verifies the
# full IPC chain. Skips gracefully if the published sidecar binary is absent
# (fresh clone / CI without the publish step).
name = "sidecar_integration_test"
path = "tests/sidecar_integration.rs"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = true
